Fixed extra whitespace on mobile view

--- a/app/assets/stylesheets/full_time_bootcamp.scss
+++ b/app/assets/stylesheets/full_time_bootcamp.scss
@@ -101,3 +101,15 @@ $grey: #646464;
   background-size: cover;
 }
 
+
+// FRONT_END
+
+.front-bg-header{
+  background-image: url('/assets/full-time/csharp/csharp-bg.jpg');
+  background-repeat: none;
+  padding: 230px 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+
